[Dashboard-Menu] (Fix) Fix bug z-index footer if sidebar menu dashboard is open

--- a/Views/includes/Footer/__footer.scss
+++ b/Views/includes/Footer/__footer.scss
@@ -5,6 +5,7 @@ footer {
   background-color:rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
   padding: 1rem 0 !important;
+  z-index: -1;
 
   .containerSection {
     #footer {
